crates/uitest/fixtures/semantic_borrowck/noesc_storage_escape.snap
---
source: crates/uitest/tests/semantic_borrowck.rs
expression: diags
input_file: fixtures/semantic_borrowck/noesc_storage_escape.fe
---
error[16-0005]: noesc violation in `fn NoEscStore::__init__`
   ┌─ noesc_storage_escape.fe:12:9
   │
12 │         slot = e
   │         ^^^^^^^^ cannot store `Esc` in storage
